updated README and fixed docs
